// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Credential Model Creates Credentail 1`] = `
Object {
  "@context": Array [
    "https://www.w3.org/2018/credentials/v1",
    Object {
      "@version": 1.1,
      "data": Object {
        "@context": Object {
          "worker": Object {
            "@id": "meta:worker",
            "@type": "xsd:string",
          },
        },
        "@id": "meta:data",
        "@type": "@id",
      },
      "meta": "https://meta-id.meta-belarus.org/vc-schema#",
    },
  ],
  "credentialSubject": Object {
    "data": Object {
      "@type": "TestCredentialSubjectDataType",
      "worker": "Valentin Michalych",
    },
  },
  "holder": Object {
    "id": "did:peer:holder",
  },
  "id": "did:peer:doc",
  "issuanceDate": Any<String>,
  "type": Array [
    "VerifiableCredential",
    "TestCredential",
  ],
}
`;

exports[`Credential Model Signs Credential 1`] = `
Object {
  "@context": Array [
    "https://www.w3.org/2018/credentials/v1",
    Object {
      "@version": 1.1,
      "data": Object {
        "@context": Object {
          "worker": Object {
            "@id": "meta:worker",
            "@type": "xsd:string",
          },
        },
        "@id": "meta:data",
        "@type": "@id",
      },
      "meta": "https://meta-id.meta-belarus.org/vc-schema#",
    },
  ],
  "credentialSubject": Object {
    "data": Object {
      "@type": "TestCredentialSubjectDataType",
      "worker": "Valentin Michalych",
    },
  },
  "holder": Object {
    "id": "did:peer:holder",
  },
  "id": "did:peer:doc",
  "issuanceDate": Any<String>,
  "issuer": "did:peer:issuer",
  "proof": Object {
    "created": Any<String>,
    "jws": Any<String>,
    "proofPurpose": "assertionMethod",
    "type": "EcdsaSecp256k1Signature2019",
    "verificationMethod": Any<String>,
  },
  "type": Array [
    "VerifiableCredential",
    "TestCredential",
  ],
}
`;
